# swarm_pilot

./: .gitignore  CMakeLists.txt  package.xml
include/: swarm_pilot.h
launch/: swarm_pilot.launch  swarm_pilot_docker.launch
scripts/: gen_sim.py  mission_generator.ipynb  sync_mission.sh
src/: swarm_pilot.cpp  swarm_pilot_node.cpp
